--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,65 +1,64 @@
-# hugo deployment to github pages
-# triggers on push to main branch
-# builds and deploys site to github pages
-
-name: deploy hugo site
+# Hugo deployment to GitHub Pages
+name: Deploy Hugo site to Pages
 
 on:
   push:
-    branches:
-      - main  # TODO(hz2): change to your default branch if different
-  
-  # allow manual trigger from actions tab
+    branches: ["main"]
   workflow_dispatch:
 
-# permissions for github pages deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# only one deployment at a time
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: false
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
-  # build job
   build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.128.0
     steps:
-      - name: checkout
+      - name: Install Hugo CLI
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
+      
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          fetch-depth: 0
-
-      - name: setup hugo
-        uses: peaceiris/actions-hugo@v3
-        with:
-          hugo-version: 'latest'
-          extended: true
-
-      - name: setup pages
+      
+      - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v4
-
-      - name: build site
+        uses: actions/configure-pages@v5
+      
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      
+      - name: Build with Hugo
         env:
+          HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
         run: |
           hugo \
-            --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-
-      - name: upload artifact
+      
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
-  # deploy job
   deploy:
     environment:
       name: github-pages
@@ -67,6 +66,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: deploy to github pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
