--- a/config.toml
+++ b/config.toml
@@ -84,11 +84,11 @@ unsafe = true
 [markup.highlight]
 # syntax highlighting style
 # see: https://xyproto.github.io/splash/docs/
-style = "monokailight"
+style = "monokai"
 # show line numbers
 lineNos = false
-# no classes, inline styles
-noClasses = true
+# use classes instead of inline styles for theme support
+noClasses = false
 
 [markup.tableOfContents]
 # toc depth
